# cli-toolkit

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  Makefile  README.md  coverage.out  go.mod  go.sum  pyproject.toml  tartufo.toml
.github/workflows/: test-and-lint.yaml
auth/: cache.go  cipher.go  command.go  command_test.go  doc.go  tty.go
cipher/: aes.go
cmd/mdmak/: main.go
cmd/toolkit/: main.go
cmd/toolkit-assume-role/: main.go
cmd/toolkit-git-hook/: main.go
cmd/toolkit-serve-static/: main.go
cmd/toolkit-show-md/: .github.style.html  main.go
cmd/toolkit-tui/: main.go
creds/: cache.go  command.go  command_test.go
jsonstream/: angler.go  angler_test.go
key/: key.go
scaffold/: go_project.go  project.go  project_test.go  python_project.go
scaffold/.go/: .pre-commit-config.yaml  .pre-commit-config.yaml.tmplt  Makefile  tartufo.toml.tmplt
scaffold/.python/: .gitignore.tmplt  .pre-commit-config.yaml  .pre-commit-config.yaml.tmplt  pyproject.toml.tmplt  tartufo.toml.tmplt
scaffold/.python/docs/: .air.toml.tmplt  README.md.tmplt  conf.py
scaffold/.ts.cdk/: .gitattributes.tmplt  .gitignore.tmplt  .npmignore  .prettierignore.tmplt  cdk.json  package.json  tsconfig.json
scaffold/.ts.cdk/src/: main.ts
scaffold/.ts.cdk/test/: setUp.ts.tmplt  utils.ts.tmplt  vitest.d.ts
scaffold/data/: .golangci.yaml  test-and-lint.yaml
scaffold/testdata/: github.golangci-lint.resp.json  github.tartufo.resp.json  npm.aws-cdk-lib.resp.json  pypi.black.resp.json
scaffold/tui/: tui.go
scripts/debug-tui/: main.go
scripts/rename-files/: main.go
src/kxue43_toolkit/: aws.py
src/toolkit/: aws.py
terminal/: tty.go
tui/: tui.go
version/: version.go
(+14 files in other folders)
